--- a/NorthWind.Sales.Backend.UseCases/Resources/CreateOrderMessages.resx
+++ b/NorthWind.Sales.Backend.UseCases/Resources/CreateOrderMessages.resx
@@ -126,6 +126,12 @@
   <data name="ProductIdNotFoundErrorTemplate" xml:space="preserve">
     <value>El producto {0} no existe.</value>
   </data>
+  <data name="SendEmailBodyTemplate" xml:space="preserve">
+    <value>Se ha creado la order {0} con {1} productos.</value>
+  </data>
+  <data name="SendEmailsubject" xml:space="preserve">
+    <value>Order especial creada</value>
+  </data>
   <data name="UnitInStockLessThanQuantityErrorTemplate" xml:space="preserve">
     <value>Cantidad {0} de {1} no suficiente para producto {2}.</value>
   </data>
