--- a/NorthWind.Sales.Backend.UseCases/Resources/CreateOrderMessages.resx
+++ b/NorthWind.Sales.Backend.UseCases/Resources/CreateOrderMessages.resx
@@ -126,11 +126,17 @@
   <data name="ProductIdNotFoundErrorTemplate" xml:space="preserve">
     <value>El producto {0} no existe.</value>
   </data>
+  <data name="PurchaseOrderCreatedTemplate" xml:space="preserve">
+    <value>Orden de compra {0} creada.</value>
+  </data>
   <data name="SendEmailBodyTemplate" xml:space="preserve">
     <value>Se ha creado la order {0} con {1} productos.</value>
   </data>
   <data name="SendEmailsubject" xml:space="preserve">
     <value>Order especial creada</value>
+  </data>
+  <data name="StartingPurchaseOrderCreation" xml:space="preserve">
+    <value>Inicio de creacion de orden de compra.</value>
   </data>
   <data name="UnitInStockLessThanQuantityErrorTemplate" xml:space="preserve">
     <value>Cantidad {0} de {1} no suficiente para producto {2}.</value>
